test/inputs/expr/good/multiline-choice-with-nesting.miros
$|4⟨
  one,
  two
    three
    ,
  @fourrrr
   ,
  $5   ,
  $|2⟨unu, doi, trei⟩,
  @^⟨$|1⟨
      first,
      second
     ⟩⟩


⟩
