test/inputs/expr/bad/badly-closed-nested-choice.miros
$|4⟨
  $|1⟨
      first,
      second
 ⟩
⟩
